<resources>
    <string name="app_name">宝码数智商户</string>
    <string name="api_domain">https://baomadev.cttq.com</string>
    <string name="title_activity_cashier">CashierActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_username">请输入账号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="confirm_logout_text">您想退出宝码数智商户系统码？</string>
    <string name="button_text_cancel">取消</string>
    <string name="button_text_confirm_logout">确定退出</string>
    <string name="prefix_rmb">￥</string>
    <string name="title_order">订单</string>
    <string name="title_basic_data">基础数据</string>
    <string name="title_chart">交易分布图</string>
    <string name="label_today_total_income">今日总收入</string>
    <string name="label_today_total_order">今日总订单</string>
    <string name="label_income_amount">收入金额</string>
    <string name="label_order_amount">订单数量</string>
    <string name="label_exclude_refund">（不含退单）</string>
    <string name="unit_order">单</string>
    <string name="button_text_refund">退款</string>
    <string name="button_text_confirm_refund">确认退款</string>
    <string name="button_text_cancel_refund">取消操作</string>
    <string name="unit_RMB">￥</string>
    <string name="calc_one">1</string>
    <string name="calc_two">2</string>
    <string name="calc_three">3</string>
    <string name="calc_four">4</string>
    <string name="calc_five">5</string>
    <string name="calc_six">6</string>
    <string name="calc_seven">7</string>
    <string name="calc_eight">8</string>
    <string name="calc_nine">9</string>
    <string name="calc_zero">0</string>
    <string name="calc_plus">+/=</string>
    <string name="calc_deduct">－</string>
    <string name="calc_multiply">×</string>
    <string name="calc_divide">÷</string>
    <string name="calc_point">·</string>
    <string name="calc_cashier">收银</string>
    <string name="money_zero">0.00</string>
    <string name="del">del</string>
    <string name="waiting_customer_pay">等待客户付款...</string>
    <string name="receiving_customer_pay">已扫付款码，收款中...</string>
    <string name="please_show_paycode">请出示付款码</string>
    <string name="button_text_cancel_cashier">取消收银</string>
    <string name="button_text_relaunch_cashier">重新收银</string>
    <string name="button_text_confirm">确定</string>
    <string name="pay_channel_baoma">宝码</string>
    <string name="pay_channel_ali">支付宝</string>
    <string name="pay_channel_wechat">微信</string>
    <string name="pay_channel_union">银联</string>
    <string name="pay_channel_visit">来访</string>
    <string name="pay_channel_partner">常驻</string>
    <string name="left_bracket">（</string>
    <string name="right_bracket">）</string>
    <string name="pay_type_fixed">固定额度</string>
    <string name="pay_type_temp">临时额度</string>
    <string name="pay_type_combine">组合额度</string>
    <string name="pay_type_other">其它</string>
    <string name="order_status_normal">其它组合额度</string>
    <string name="order_status_refunding">退款中</string>
    <string name="order_status_refunded">已退款</string>
    <string name="refund_confirm_title">您正在操作金额为%1$s的订单退款...</string>
    <string name="set_receive_money">请先输入有效的收款金额</string>
    <string name="refund_empty_password">请输入当前商户登录密码</string>
    <string name="title_today_report">今日报表</string>

    <string name="codebar_scan">Scanning</string>
    <string name="album">album</string>
</resources>