<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="670dp"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_four"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyOne" />

        <TextView
            android:id="@+id/keyMutiply"
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_multiply"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keySix"
            app:layout_constraintTop_toBottomOf="@+id/keyDivide" />

        <TextView
            android:id="@+id/keyPlus"
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_plus"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyMutiply"
            app:layout_constraintTop_toBottomOf="@+id/keyDeduct" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/border_calculate_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/unit_RMB"
            android:textColor="#78909C"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6" />

        <TextView
            android:id="@+id/amountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@color/light_yellow"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/calc_zero"
            android:textColor="@color/default_dark"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/view6" />

        <TextView
            android:id="@+id/keyOne"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_one"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/keyFour"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_four"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyOne" />

        <TextView
            android:id="@+id/keySeven"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_seven"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyFour" />

        <TextView
            android:id="@+id/keyEight"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_eight"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyNight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keySeven"
            app:layout_constraintTop_toBottomOf="@+id/keyFour" />

        <TextView
            android:id="@+id/keyNight"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_nine"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyCashier"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyEight"
            app:layout_constraintTop_toBottomOf="@+id/keyFour" />

        <TextView
            android:id="@+id/keyPoint"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_point"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyZero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keySeven" />

        <TextView
            android:id="@+id/keyZero"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_zero"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyPoint"
            app:layout_constraintTop_toBottomOf="@+id/keyEight" />

        <TextView
            android:id="@+id/keyFive"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_five"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keySix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyFour"
            app:layout_constraintTop_toBottomOf="@+id/keyOne" />

        <TextView
            android:id="@+id/keySix"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_six"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyMutiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyFive"
            app:layout_constraintTop_toBottomOf="@+id/keyOne" />

        <TextView
            android:id="@+id/keyTwo"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_two"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyOne"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/keyThree"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_three"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyTwo"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/keyDivide"
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_divide"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toStartOf="@+id/keyDeduct"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyThree"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/keyDeduct"
            android:layout_width="105dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:gravity="center"
            android:text="@string/calc_deduct"
            android:textAlignment="center"
            android:textColor="@color/default_dark"
            android:textSize="52sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyDivide"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/keyCashier"
            android:layout_width="216dp"
            android:layout_height="270dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_cashier"
            android:gravity="center"
            android:text="@string/calc_cashier"
            android:textColor="@color/default_dark"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyNight"
            app:layout_constraintTop_toBottomOf="@+id/keyMutiply" />

        <LinearLayout
            android:id="@+id/keyDelete"
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_calculate_element"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/keyCashier"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/keyZero"
            app:layout_constraintTop_toBottomOf="@+id/keyNight">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/del"
                android:src="@drawable/icon_back_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>