<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ReportActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.foodcode.StatusBarFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@color/bg_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:letterSpacing="0.05"
        android:text="@string/title_basic_data"
        android:textColor="@color/default_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:letterSpacing="0.05"
        android:text="@string/title_chart"
        android:textColor="@color/default_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="132dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="82dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_today_total_order"
            android:textColor="@color/default_dark"
            android:textSize="18sp"
            android:translationX="40dp"
            android:translationY="35dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exclude_refund"
            android:textColor="@color/sub_gray"
            android:textSize="14sp"
            android:translationX="140dp"
            android:translationY="40dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6,666"
            android:textColor="@color/default_dark"
            android:textSize="32sp"
            android:translationX="40dp"
            android:translationY="72dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="338dp"
        android:layout_height="132dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="82dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_today_total_income"
            android:textColor="@color/default_dark"
            android:textSize="18sp"
            android:translationX="40dp"
            android:translationY="35dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exclude_refund"
            android:textColor="@color/sub_gray"
            android:textSize="14sp"
            android:translationX="140dp"
            android:translationY="40dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥8,888.88"
            android:textColor="@color/default_dark"
            android:textSize="32sp"
            android:translationX="40dp"
            android:translationY="72dp" />

    </androidx.cardview.widget.CardView>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <SeekBar-->
<!--        android:id="@+id/seekBar2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_toLeftOf="@+id/tvYMax"-->
<!--        android:max="200"-->
<!--        android:paddingBottom="12dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tvYMax"-->
<!--        app:layout_constraintStart_toEndOf="@+id/fragmentContainerView" />-->

<!--    <SeekBar-->
<!--        android:id="@+id/seekBar1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/seekBar2"-->
<!--        android:layout_margin="8dp"-->
<!--        android:layout_toLeftOf="@+id/tvXMax"-->
<!--        android:max="1500"-->
<!--        android:paddingBottom="12dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tvXMax"-->
<!--        app:layout_constraintStart_toEndOf="@+id/fragmentContainerView" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvXMax"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="19dp"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:gravity="right"-->
<!--        android:text="x"-->
<!--        android:textAppearance="?android:attr/textAppearanceSmall"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvYMax"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        android:gravity="right"-->
<!--        android:text="y"-->
<!--        android:textAppearance="?android:attr/textAppearanceSmall"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/view5"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>